# gl_010_yaml_groovy

./: .gitignore  README.md
.github/workflows/: gl_011_python.yml  gl_012_typescript.yml
gl_011_yaml_python/: Jenkinsfile  pyproject.toml
gl_011_yaml_python/src/gl_011/: __init__.py  fizz_buzz.py  hello_global_logic.py
gl_011_yaml_python/tests/: test_fizz_buzz.py  test_hello_global_logic.py
gl_012_yaml_typescript/: .eslintrc.json  Jenkinsfile  README.md  jest.config.js  package.json
gl_012_yaml_typescript/src/: fizz-buzz.ts  hello-global-logic.ts  meta-data.ts
gl_012_yaml_typescript/tests/: fizz-buzz.test.ts  hello-global-logic.test.ts  meta-data.test.ts
