[project]
name = "gl-011"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest>=8.4.0",
]

[project.scripts]
hello = "gl_011:hello_global_logic.hello"
fizz_buzz = "gl_011.fizz_buzz:main"

[build-system]
requires = ["uv_build>=0.7.12,<0.8"]
build-backend = "uv_build"
